fix: maintain danger button styling in dark mode

--- a/src/assets/scss/global/utilites.scss
+++ b/src/assets/scss/global/utilites.scss
@@ -73,6 +73,7 @@
   color: var(--color-text-alt);
 
   .dark & {
+    background-color: var(--color-danger);
     color: var(--color-text-alt);
   }
 }
